# Comet

./: docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alarms_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_alarms.py
backend/app/: config.py  database.py  ingest.py  main.py
backend/app/models/: alarm.py
backend/app/repositories/: alarms.py
backend/app/routers/: alarms.py
backend/app/schemas/: alarm.py
backend/tests/: test_health.py
data/: rtmc_sample.csv
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/__tests__/: alarms.smoke.test.tsx
frontend/src/components/: SeverityBadge.tsx
frontend/src/hooks/: useAlarms.ts
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: _app.tsx  alarms.tsx  index.tsx
ops/: docker-compose.yml
ops/.github/workflows/: ci-backend.yml  ci-frontend.yml
