[project]
name = "alarms-api"
version = "0.1.0"
description = "FastAPI for Alarm Supervision"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "pandas>=2.2",
  "orjson>=3.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-dir]
app = "app"

# Optionnel : inclusion des fichiers de données
[tool.setuptools.package-data]
app = ["**/*.sql", "**/*.yml", "**/*.yaml"]
